[gd_scene load_steps=5 format=3 uid="uid://ddy172d268tkv"]

[ext_resource type="Script" path="res://Frog/frog.gd" id="1_5p76s"]
[ext_resource type="Texture2D" uid="uid://d4fq8fetoj6mr" path="res://Frog/Frösche/Fosch normen 2/frachiganz_koerper.png" id="2_r8mdj"]
[ext_resource type="Texture2D" uid="uid://b6e1olmqmotg5" path="res://Frog/Frösche/Fosch normen 2/frachiganz_nase.png" id="3_jr0bx"]

[sub_resource type="CircleShape2D" id="CircleShape2D_njf7p"]
radius = 48.28

[node name="FrogBaseScene" type="Area2D"]
physics_interpolation_mode = 1
script = ExtResource("1_5p76s")

[node name="LungenKollapsierer" type="Timer" parent="."]
wait_time = 0.173
autostart = true

[node name="VitalTimer" type="Timer" parent="."]
wait_time = 5.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_njf7p")
debug_color = Color(0.784457, 0.351782, 0.656601, 0.42)

[node name="Body" type="Sprite2D" parent="."]
scale = Vector2(0.075, 0.075)
texture = ExtResource("2_r8mdj")

[node name="Eyes" type="Sprite2D" parent="."]
scale = Vector2(0.075, 0.075)

[node name="ArmLeft" type="Sprite2D" parent="."]
scale = Vector2(0.075, 0.075)

[node name="ArmRight" type="Sprite2D" parent="."]
scale = Vector2(0.075, 0.075)

[node name="LegLeft" type="Sprite2D" parent="."]
scale = Vector2(0.075, 0.075)

[node name="LegRight" type="Sprite2D" parent="."]
scale = Vector2(0.075, 0.075)

[node name="Accesoire1" type="Sprite2D" parent="."]
scale = Vector2(0.075, 0.075)

[node name="Nase2" type="Sprite2D" parent="."]
scale = Vector2(0.075, 0.075)
texture = ExtResource("3_jr0bx")

[node name="Schlauchpunkt" type="Marker2D" parent="."]
position = Vector2(0, 18)

[node name="Happy" type="Sprite2D" parent="."]
visible = false
scale = Vector2(0.075, 0.075)

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="LungenKollapsierer" to="." method="_on_lungen_kollapsierer_timeout"]
[connection signal="timeout" from="VitalTimer" to="." method="_on_vital_timer_timeout"]
